# mosquitto

./: .hgeol  .hgignore  .hgtags  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.txt  Makefile  aclfile.example  command_messages.txt  compiling.txt  config.h  config.mk  external_security_checks.txt  mosquitto.conf  pwfile.example  readme.txt  roadmap.txt
client/: CMakeLists.txt  Makefile  client.c  client_shared.c  client_shared.h  config.h  loop.c  pub_client.c  state.c  sub_client.c
compat/stdbool/: stdbool.h
compat/stdint/: stdint.h
debian/: changelog  control  copyright  dirs  docs  files  init.d  mosquitto.conf  mosquitto.default  postinst  postrm  prerm  rules  watch
debian/patches/: 00list  mosquitto.conf.dpatch
doc/: topic-match.kds
examples/temperature_conversion/: Makefile  main.cpp  temperature_conversion.cpp  temperature_conversion.h
installer/: mosquitto-cygwin.nsi  mosquitto.nsi
lib/: CMakeLists.txt  Makefile  database_mosq.c  database_mosq.h  linker.version  logging_mosq.c  memory_mosq.c  memory_mosq.h  messages_mosq.c  messages_mosq.h  mosquitto.c  mosquitto.h  mosquitto_internal.h  net_mosq.c  net_mosq.h  read_handle.c  read_handle.h  read_handle_client.c  read_handle_shared.c  send_base_mosq.c  send_client_mosq.c  send_mosq.c  send_mosq.h  util_mosq.c  util_mosq.h  will_mosq.c  will_mosq.h
lib/cpp/: CMakeLists.txt  Makefile  mosquittopp.cpp  mosquittopp.h
lib/python/: Makefile  mosquitto.py  readme.txt  setup.py  sub.py
man/: CMakeLists.txt  Makefile  libmosquitto.3.xml  mosquitto.8.xml  mosquitto.conf.5.xml  mosquitto_pub.1.xml  mosquitto_sub.1.xml  mqtt.7.xml
man/po/libmosquitto/: libmosquitto.3.pot
man/po/mosquitto/: mosquitto.8.pot
man/po/mosquitto.conf/: mosquitto.conf.5.pot
man/po/mosquitto_pub/: mosquitto_pub.1.pot
man/po/mosquitto_sub/: mosquitto_sub.1.pot
man/po/mqtt/: mqtt.7.pot
misc/: pachube_update.pl
misc/currentcost/: cc128_parse.pl  cc128_read.py  google_powermeter_update.pl
misc/currentcost/gnome-panel/: CurrentCostMQTT.py
security/: mosquitto.apparmor
server/: Makefile  database.c  server.c
service/svscan/: run
service/upstart/: mosquitto.conf
service/windows/: mosquitto-svc.xml  readme.txt
src/: CMakeLists.txt  Makefile  bridge.c  conf.c  context.c  database.c  logging.c  loop.c  managed_send.c  memory.c  messages.c  mosquitto.c  mqtt3.h  net.c  persist.c  persist.h  raw_send.c  raw_send_client.c  raw_send_server.c  read_handle.c  read_handle_client.c  read_handle_server.c  security.c  security_external.c  send_server.c  service.c  subs.c  subs.h  util.c
src/db_dump/: Makefile  db_dump.c
static/: install-static  readme-static.txt  uninstall-static
test/: Makefile  fake_user.c  msgsps.c  msgsps_pub.c  msgsps_sub.c  packet-gen.c  qos.c  random_client.c  test_client.c
windows/: mosquitto-svc.xml
